--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,12 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/fund/fund-dialog.controller.js"></script>
+    <script src="app/entities/fund/fund-detail.controller.js"></script>
+    <script src="app/entities/fund/fund-delete-dialog.controller.js"></script>
+    <script src="app/entities/fund/fund.state.js"></script>
+    <script src="app/entities/fund/fund.service.js"></script>
+    <script src="app/entities/fund/fund.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
